Rename some classes, cache Graph read payload as json array, add queries.json example